syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.kimikevin.client.proto";
option java_outer_classname = "HelloWorldProto";

package com.kimikevin;

service Simple {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}